--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="text_main">Main</string>
     <string name="text_individual">Individual</string>
     <string name="text_profile">Profile</string>
+    <string name="get_lights">Get Lights</string>
 </resources>
